--- a/src/app/login/login.page.html
+++ b/src/app/login/login.page.html
@@ -9,9 +9,9 @@
 <!--        <ion-label class="ion-text-wrap">{{verification_message}}</ion-label>-->
 <!--      </ion-item>-->
       <ion-item>
-        <ion-label class="biru" position="floating">Username</ion-label>
+        <ion-label class="biru" position="floating">Email</ion-label>
         <ion-input type="email" email formControlName="email" ></ion-input>
-        <ion-icon name="person"color="primary" slot="end"></ion-icon>
+        <ion-icon name="mail"color="primary" slot="end"></ion-icon>
       </ion-item>
       <ion-item>
         <ion-label class="biru" position="floating">Password</ion-label>
