Home , sama create form

--- a/src/app/main/dashboard/dashboard.page.scss
+++ b/src/app/main/dashboard/dashboard.page.scss
@@ -37,6 +37,12 @@ ion-slides {
 .bg-lightgrey{
     background-color: lightgrey;
 }
+
+.box{
+    background-color: #2dd36f;
+    height: auto;
+}
+
 ion-card-header{
     padding: 0;
 }
