Home , sama create form

--- a/src/app/main/dashboard/dashboard.page.html
+++ b/src/app/main/dashboard/dashboard.page.html
@@ -44,7 +44,7 @@
       <ion-col  *ngFor="let data of rs" size="3" class="rs" style="background-color: #2dd36f;" [routerLink]="['./',data.id]">
         <img src="{{data.imageURL}}" alt="dummy">
         <ion-label>
-          {{data.nama}}s
+          {{data.nama}}
         </ion-label>
       </ion-col>
     </ion-row>
