--- a/src/app/admin/create/create.page.html
+++ b/src/app/admin/create/create.page.html
@@ -8,26 +8,36 @@
 </ion-header>
 
 <ion-content>
-  <form>
+  <form [formGroup]="formAdmin" (ngSubmit)="submitForm()" >
     <ion-list>
       <ion-item>
-        <ion-label position="floating">Email</ion-label>
-        <ion-textarea></ion-textarea>
+        <ion-label  position="floating">Email</ion-label>
+        <ion-textarea formControlName="email" ></ion-textarea>
       </ion-item>
       <ion-item>
-        <ion-label position="floating">Username</ion-label>
-        <ion-input type="text"></ion-input>
+        <ion-label  position="floating">Nama</ion-label>
+        <ion-input formControlName="nama" type="text"></ion-input>
       </ion-item>
       <ion-item>
-        <ion-label position="floating">Password</ion-label>
-        <ion-input type="text"></ion-input>
+        <ion-label  position="floating">Phone Number</ion-label>
+        <ion-input  formControlName="noTelp" type="text"></ion-input>
       </ion-item>
       <ion-item>
-        <ion-label position="floating">Confirm Password</ion-label>
-        <ion-input type="number" ></ion-input>
+        <ion-label  position="floating">Password</ion-label>
+        <ion-input formControlName="password" type="text"></ion-input>
       </ion-item>
+
+      <ion-item>
+        <ion-label>Privilege</ion-label>
+        <ion-select  interface="action-sheet" formControlName="privilege">
+          <ion-select-option value="Dokter">Dokter</ion-select-option>
+          <ion-select-option value="Perawat">Perawat</ion-select-option>
+          <ion-select-option value="Staff">Staff</ion-select-option>
+        </ion-select>
+      </ion-item>
+
     </ion-list>
-    <ion-button style="margin-left: 16px;">
+    <ion-button type="submit" style="margin-left: 16px;">
       Submit
     </ion-button>
   </form>
