--- a/src/app/edit-profile/edit-profile.page.html
+++ b/src/app/edit-profile/edit-profile.page.html
@@ -5,16 +5,17 @@
 </ion-header>
 
 <ion-content>
-  <ion-avatar (click)="presentPopover($event)">
-    <img [src]="imageUrl"/>
-    <div class="test">
-
-      <span class="edit"><ion-icon name="camera"></ion-icon></span>
-    </div>
-  </ion-avatar>
-
+  <div>
+    <ion-avatar class="test" (click)="presentPopover($event)">
+      <!-- <img src="../../assets/img/sun.png"> -->
+      <img [src]="imageUrl"/>
+      <div >
+        <span class="edit"><ion-icon name="camera"></ion-icon></span>
+      </div>
+    </ion-avatar>
+  </div>
   <div class="profile">
-     <form (ngSubmit)="saveProfile()" [formGroup]="updateProfile">
+    <form (ngSubmit)="saveProfile()" [formGroup]="updateProfile">
       <ion-item lines="undefined">
         <ion-icon slot="start" name="person"></ion-icon>
         <ion-label position="floating">
@@ -37,35 +38,35 @@
         <ion-input type="text" formControlName="email"></ion-input>
       </ion-item>
 
-       <div class="bhs">
-         <h5 class="title">Bahasa yang dikuasai</h5>
-         <ion-grid fixed>
-           <ion-row  class="ion-justify-content-center">
-             <ion-col size="4" *ngFor="let  bahasa of user.bahasa">
-               <ion-img src="../../../assets/img/medal.png"></ion-img>
-               <h5 class="subtitle">{{bahasa}}</h5>
-             </ion-col>
-           </ion-row>
-         </ion-grid>
-       </div>
-       <div class="btn-section">
-         <ion-grid>
-           <ion-row>
-             <ion-button type="submit" shape="round" >
-               <ion-icon class="icon-btn" slot="start" name="save"></ion-icon>
-               <ion-label class="label-btn">Simpan</ion-label>
-             </ion-button>
-           </ion-row>
-           <ion-row>
-             <ion-button (click)="presentAlert()"  shape="round">
-               <ion-icon class="icon-btn" slot="start" name="close"></ion-icon>
-               <ion-label class="label-btn">Batal</ion-label>
-             </ion-button>
-           </ion-row>
-         </ion-grid>
-       </div>
+      <div class="bhs">
+        <h5 class="title">Bahasa yang dikuasai</h5>
+        <ion-grid fixed>
+          <ion-row  class="ion-justify-content-center">
+            <ion-col size="4" *ngFor="let  bahasa of user.lang">
+              <ion-img src="../../../assets/img/medal.png"></ion-img>
+              <h5 class="subtitle">{{bahasa}}</h5>
+            </ion-col>
+          </ion-row>
+        </ion-grid>
+      </div>
+      <div class="btn-section">
+        <ion-grid>
+          <ion-row>
+            <ion-button type="submit" shape="round" >
+              <ion-icon class="icon-btn" slot="start" name="save"></ion-icon>
+              <ion-label class="label-btn">Simpan</ion-label>
+            </ion-button>
+          </ion-row>
+          <ion-row>
+            <ion-button (click)="presentAlert()"  shape="round">
+              <ion-icon class="icon-btn" slot="start" name="close"></ion-icon>
+              <ion-label class="label-btn">Batal</ion-label>
+            </ion-button>
+          </ion-row>
+        </ion-grid>
+      </div>
 
-     </form>
+    </form>
   </div>
 
 </ion-content>
