--- a/src/app/login/login.page.html
+++ b/src/app/login/login.page.html
@@ -3,7 +3,7 @@
     <img src="../assets/img/logo.png" />
   </ion-avatar>
 
-  <form  [formGroup]="formSignIn" (ngSubmit)="submitForm()" style="padding-right: 15%; padding-left: 10%">
+  <form  [formGroup]="formSignIn" (ngSubmit)="submitForm()">
     <ion-grid>
 <!--      <ion-item color="success" class="ion-margin-bottom" *ngIf="verification_message">-->
 <!--        <ion-label class="ion-text-wrap">{{verification_message}}</ion-label>-->
