--- a/src/app/login/login.page.scss
+++ b/src/app/login/login.page.scss
@@ -25,3 +25,14 @@ ion-row ion-button{
   margin-top: 1rem;
   text-align: center;
 }
+img{
+  object-fit: contain;
+}
+@media only screen and (max-width: 600px) {
+  form{
+    padding: 1rem;
+  }
+}
+form{
+  padding: 1rem 2rem 3rem 2rem;
+}
