--- a/src/app/main/contact/contact.page.html
+++ b/src/app/main/contact/contact.page.html
@@ -1,9 +1,11 @@
 <ion-header>
   <ion-toolbar>
-    <ion-title class="title" >contact</ion-title>
+    <ion-title class="title">Contact</ion-title>
   </ion-toolbar>
 </ion-header>
 
 <ion-content>
-
+  <ion-list>
+    
+  </ion-list>
 </ion-content>
