--- a/src/app/main/profile/profile.page.html
+++ b/src/app/main/profile/profile.page.html
@@ -1,26 +1,28 @@
-<ion-header>
+<!-- <ion-header> -->
   <ion-toolbar>
-    <ion-title class="title">Profil</ion-title>
+    <ion-title class="title">Profile</ion-title>
   </ion-toolbar>
-</ion-header>
+<!-- </ion-header> -->
 
 <ion-content>
+  <div class="testt">
+  </div>
   <ion-avatar>
-    <img [src]="imageUrl" />
+    <img [src]="imageUrl"/>
   </ion-avatar>
   
   <div class="profile">
       <ion-item lines="undefined">
         <ion-icon slot="start" name="person"></ion-icon>
         <ion-label>
-          <h3>Nama</h3>
+          <h3>Name</h3>
           <h2>{{user.nama}}</h2>
         </ion-label>
       </ion-item>
       <ion-item>
         <ion-icon slot="start" name="call"></ion-icon>
         <ion-label>
-          <h3>Nomor Telepon</h3>
+          <h3>Phone Number</h3>
           <h2>{{user.noTelp}}</h2>
         </ion-label>
       </ion-item>
@@ -38,13 +40,13 @@
       <ion-row>
         <ion-button [routerLink]="['/edit-profile']"  shape="round">
           <ion-icon class="icon-btn" slot="start" name="pencil"></ion-icon>
-          <ion-label class="label-btn">Ubah Profil</ion-label>
+          <ion-label class="label-btn">Edit Profile</ion-label>
         </ion-button>
       </ion-row>
       <ion-row>
         <ion-button (click)="logout()" shape="round">
           <ion-icon class="icon-btn" slot="start" name="log-out"></ion-icon>
-          <ion-label class="label-btn">Keluar</ion-label>
+          <ion-label class="label-btn">Log Out</ion-label>
         </ion-button>
       </ion-row>
     </ion-grid>
