--- a/src/app/login/login.page.html
+++ b/src/app/login/login.page.html
@@ -28,10 +28,10 @@
 
   </form>
 
-  <div class="subtitle-regist">
-    Haven't got Account ?
-    <ion-text style="color: black" routerLink="/register">
-      <a>Sign Up</a>
-    </ion-text>
-  </div>
+<!--  <div class="subtitle-regist">-->
+<!--    Haven't got Account ?-->
+<!--    <ion-text style="color: black" routerLink="/register">-->
+<!--      <a>Sign Up</a>-->
+<!--    </ion-text>-->
+<!--  </div>-->
 </ion-content>
