--- a/src/app/main/dashboard/dashboard.page.html
+++ b/src/app/main/dashboard/dashboard.page.html
@@ -19,7 +19,7 @@
     <ion-title class="title">Search</ion-title>
   </ion-toolbar>
   <ion-toolbar>
-    <ion-searchbar mode="ios"></ion-searchbar>
+    <ion-searchbar mode="ios" ></ion-searchbar>
   </ion-toolbar>
 </ion-header>
 
@@ -41,7 +41,7 @@
 
   <ion-grid style="margin-top: 7%; margin-left: 0;">
     <ion-row>
-      <ion-col  *ngFor="let data of rs" size="3" class="rs" style="background-color: #2dd36f;" [routerLink]="['./',data.id]">
+      <ion-col  *ngFor="let data of rs" size="3" class="rs" style="background-color: #2dd36f; height: 130px" [routerLink]="['./',data.id]">
         <img src="{{data.imageURL}}" alt="dummy">
         <ion-label>
           {{data.nama}}
