--- a/src/app/main/dashboard/dashboard.page.scss
+++ b/src/app/main/dashboard/dashboard.page.scss
@@ -72,6 +72,10 @@ ion-col {
 ion-title{
     color:white;
 }
+
+#nama_rs{
+    font-size:5vw;
+}
 // img{
 //     height: 180px;
 //     width: 100%;
