--- a/src/app/admin/admin.page.html
+++ b/src/app/admin/admin.page.html
@@ -13,14 +13,14 @@
         <ion-button color="primary" (click)="create()" style="margin-left: 5px; padding-left: 0;">
           Create Account<ion-icon name="add-circle" style="margin-left: 0px;"></ion-icon>
         </ion-button>
-        <ion-item-sliding style="margin-bottom: 10px;" *ngFor="let  user of users" #slidingItems>
+        <ion-item-sliding style="margin-bottom: 10px;" *ngFor="let  user of users; let i = index" #slidingItems>
           <!--    edit      -->
           <ion-item-options side="start">
             <ion-item-option color="primary"  ><ion-icon slot="icon-only"  name="create"></ion-icon></ion-item-option>
           </ion-item-options>
           <!--     delete     -->
           <ion-item-options side="end">
-            <ion-item-option color="danger" ><ion-icon slot="icon-only"  name="trash"></ion-icon></ion-item-option>
+            <ion-item-option color="danger" (click)="confirmDelete(i,slidingItems)"><ion-icon slot="icon-only"  name="trash"></ion-icon></ion-item-option>
           </ion-item-options>
 
           <ion-item  lines="none">
@@ -28,8 +28,7 @@
             <img src="../../../assets/img/orang.png" *ngIf="user.profileImage == null" style="width: 70px; height: 70px; margin: 10px; align-self: center;" />
             <ion-col style="align-self: center;">
               <ion-label class="item-content-12">{{user.nama}}<br></ion-label>
-<!--              <ion-label class="item-content-12">Harga Barang : Rp {{item.harga}},00<br></ion-label>-->
-<!--              <ion-label class="item-content-12">Stok         : {{item.stok}}</ion-label>-->
+              <ion-label class="item-content-12">{{user.privilege}}<br></ion-label>
             </ion-col>
           </ion-item>
         </ion-item-sliding>
