--- a/src/app/main/dashboard/dashboard.page.html
+++ b/src/app/main/dashboard/dashboard.page.html
@@ -26,22 +26,22 @@
 <ion-content fullscreen>
   <ion-slides pager="true">
     <ion-slide>
-      <img src="https://i.pinimg.com/originals/49/33/f5/4933f55c84c7f6ea31bf7c8685d72c58.jpg" alt="dummy">
+      <img src="https://cdn2.tstatic.net/lampung/foto/bank/images/cara-mudah-menjaga-kesehatan-mata-1.jpg" alt="dummy">
     </ion-slide>
 
     <ion-slide>
-      <img src="https://i.pinimg.com/originals/49/33/f5/4933f55c84c7f6ea31bf7c8685d72c58.jpg" alt="dummy">
+      <img src="https://www.duniasmartvidoran.com/files/REVISI-INFOG_3MKNAN-(1).jpg" alt="dummy">
     </ion-slide>
 
     <ion-slide>
-      <img src="https://i.pinimg.com/originals/49/33/f5/4933f55c84c7f6ea31bf7c8685d72c58.jpg" alt="dummy">
+      <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcRgtphKW31CFsW3M_A0EEPKTU3rgKDREgAzKw&usqp=CAUo" alt="dummy">
     </ion-slide>
   </ion-slides>
 
 
   <ion-grid style="margin-top: 7%; margin-left: 0;">
     <ion-row>
-      <ion-col  *ngFor="let data of rs" size="3" class="rs" style="background-color: #2dd36f; height: 135px" [routerLink]="['./',data.id]">
+      <ion-col  *ngFor="let data of rs" size="3" class="rs" style="background-color: #2dd36f; height: 140px" [routerLink]="['./',data.id]">
         <img src="{{data.imageURL}}" alt="dummy">
         <ion-label id="nama_rs">
           {{data.nama}}
