--- a/src/app/main/contact/contact.page.html
+++ b/src/app/main/contact/contact.page.html
@@ -1,6 +1,6 @@
 <ion-header>
   <ion-toolbar>
-    <ion-title class="title">Contact</ion-title>
+    <ion-title class="title" style="margin-right: -32px;">Contact</ion-title>
     <ion-buttons slot="end">
       <ion-button (click)="addContactPopover($event)">
         <ion-icon name="ellipsis-vertical-outline" color="dark"></ion-icon>
