--- a/src/theme/variables.scss
+++ b/src/theme/variables.scss
@@ -3,9 +3,9 @@
 
 /** Ionic CSS Variables **/
 :root {
-  --ion-tab-bar-background: #7296C8;
+  --ion-tab-bar-background: #5A5AAD;
   --default: #7296C8;
-
+  --ion-toolbar-background: #5A5AAD;
   /** primary **/
   --ion-color-primary: #3880ff;
   --ion-color-primary-rgb: 56, 128, 255;
