--- a/src/app/main/chat/chat.page.html
+++ b/src/app/main/chat/chat.page.html
@@ -15,7 +15,7 @@
   <ion-list>
     <ion-item *ngFor="let rc of recentChat" [routerLink]="['/','main','roomchat',rc.key]">
       <ion-avatar slot="start">
-        <img src="../../../assets/img/logo.png">
+        <img class="fitImage" src="../../../assets/img/logo.png">
       </ion-avatar>
       <ion-label>
         <h2 *ngFor="let user of rc.participant">{{user}}</h2>
