--- a/src/app/main/dashboard/dashboard.page.scss
+++ b/src/app/main/dashboard/dashboard.page.scss
@@ -6,7 +6,15 @@ ion-col{
 
 ion-slides {
     margin-top: 8%;
-    height: 30%;
+    height: 10rem;
+}
+ion-slides > img{
+    object-fit: contain;
+}
+.imgHostpital{
+    width: 100%;
+    height: 45px;
+    object-fit: cover;
 }
 .name-section{
     margin: 3rem 0 2rem 2rem;
@@ -72,7 +80,37 @@ ion-col {
 ion-title{
     color:white;
 }
-// img{
-//     height: 180px;
-//     width: 100%;
+.recentTitle{
+    margin: 1rem 1rem 0 1rem;
+    font-weight: 550;
+
+}
+.recentSection{
+    background-color: #3A3A3A;
+    overflow: auto;
+    margin-left: 1rem;
+    margin-right: 1rem;
+    border-radius: 5px;
+    margin-bottom: 1rem;
+}
+// .recentChat{
+//     position: relative;
 // }
+.recentUser{
+    margin-left: 0;
+}
+.userAvatar{
+    float: left;
+    margin-right: 10px;  
+    width: 45px;
+    height: 45px; 
+}
+.userRecent h2{
+    padding-top: 0.5rem;
+    color: white;
+}
+.userImg{
+    object-fit: contain;
+    width: 45px;
+    height: 45px;
+}
