--- a/src/app/main/roomchat/roomchat.page.html
+++ b/src/app/main/roomchat/roomchat.page.html
@@ -17,12 +17,26 @@
 <ion-content>
   <ion-grid>
     <ion-row *ngFor="let message of messages">
-      <ion-col *ngIf="message.sender == currUser; else other" offset="4" size="8" class="message ion-margin-bottom">
-        <span color="dark">{{message.msg}}</span>
+      <!-- COL CURRENT USER -->
+      <ion-col size="9" offset="3" class="message my-message" *ngIf="message.sender == currUserId; else other">
+        <!-- <img src="https://www.vetbabble.com/wp-content/uploads/2018/02/scared-cat.jpg" class="right" alt="Avatar" style="width:100%;"> -->
+        <b>{{currUserName}}</b><br>
+        <span>{{message.msg}}</span><br>
+        <div class="time">
+          {{message.time}}
+        </div>
       </ion-col>
+      <!-- COL OTHER USER -->
       <ng-template #other>
-        <ion-col size="8" class="message ion-margin-bottom">
-          <span color="dark">{{message.msg}}</span>
+        <ion-col size="9" style="position: relative;" class="message other-message">
+          <img class="user-img" [src]="userChat.profileImage">
+          <div class="chat">
+            <b>{{userChat.nama}}</b><br>
+            <span>{{message.msg}}</span><br>
+            <div class="time">
+              {{message.time}}
+            </div>
+          </div>
         </ion-col>
       </ng-template>
     </ion-row>
@@ -39,7 +53,7 @@
         <ion-col size="2">
           <ion-buttons>
             <ion-button [disabled]="!messageform.valid" type="submit">
-              <ion-icon slot="icon-only" name="send"></ion-icon>
+              <ion-icon class="sendBtn" slot="icon-only" name="send"></ion-icon>
             </ion-button>
           </ion-buttons>
         </ion-col>
